<resources>

    <!-- app -->

    <string name="app_name">Markana</string>

    <!-- activity -->

    <string name="title_activity_labelpager">@string/app_name</string>
    <string name="title_activity_notedetail">Note</string>
    <string name="title_activity_settings">Settings</string>

    <!-- action -->

    <!-- notelist -->
    <string name="action_search">Search</string>
    <string name="action_view_list">List view</string>
    <string name="action_view_grid">Grid view</string>
    <string name="action_sort">Sort</string>
    <string name="action_sort_name">Name</string>
    <string name="action_sort_modified">Modified</string>
    <string name="action_sort_opened">Opened</string>
    <string name="action_sort_reverse">Reverse order</string>
    <string name="action_filter_show_archived">Show archived</string>
    <string name="action_settings">Settings</string>

    <!-- notelist selection -->
    <string name="action_pin">Pin</string>
    <string name="action_unpin">Unpin</string>
    <string name="action_color">Change color</string>
    <string name="action_select_all">Select all (with label)</string>
    <string name="action_unlink">Unlink</string>
    <string name="action_unlink_tree">Unlink folder</string>
    <string name="action_archive">Archive</string>
    <string name="action_label">Change labels</string>
    <string name="action_unarchive">Unarchive</string>
    <string name="action_delete">Delete</string>
    <string name="action_copy">Copy</string>
    <string name="action_rename">Rename</string>
    <string name="action_rename_label">Rename label</string>
    <string name="action_delete_label">Delete label</string>

    <!-- notedetail -->
    <string name="action_undo">Undo</string>
    <string name="action_redo">Redo</string>
    <string name="action_clipboard">Copy to clipboard</string>

    <!-- notedetail find -->
    <string name="action_find">Find</string>
    <string name="action_find_previous">Previous</string>
    <string name="action_find_next">Next</string>

    <!-- notedetail bab -->
    <string name="action_bold">Bold</string>
    <string name="action_italic">Italic</string>
    <string name="action_strikethrough">Strikethrough</string>
    <string name="action_code">Code</string>
    <string name="action_heading">Heading</string>
    <string name="action_quote">Quote</string>
    <string name="action_bullet_list">Bullet list</string>
    <string name="action_number_list">Number list</string>
    <string name="action_checklist">Checklist</string>
    <string name="action_outdent">Outdent</string>
    <string name="action_indent">Indent</string>
    <string name="action_horizontal_rule">Thematic break</string>

    <!-- view -->

    <!-- labelpager -->
    <plurals name="tb_labelpager_title_selection">
        <item quantity="one">%d note</item>
        <item quantity="other">%d notes</item>
    </plurals>
    <string name="tv_labelpager_fab_create">Create note</string>
    <string name="tv_labelpager_fab_link">Link file</string>
    <string name="tv_labelpager_fab_link_folder">Link folder</string>
    <string name="tv_labelpager_fab_add_label">Add label</string>
    <string name="tv_labelpager_search_hint">Search …</string>

    <!-- notelist -->
    <string name="tv_notelist_empty_new_title">Welcome to Markana!</string>
    <string name="tv_notelist_empty_new_message">Create your first note with +</string>
    <string name="tv_notelist_empty_search_title">No results found</string>
    <string name="tv_notelist_empty_search_message">Check spelling or try another term</string>

    <!-- notedetail -->
    <string name="et_notedetail_title_hint">note.txt</string>
    <string name="et_notedetail_body_hint">Note</string>
    <string name="tv_notedetail_find_hint">Find …</string>

    <!-- settings -->
    <string name="tv_settings_header_appearance">Appearance</string>
    <string name="tv_settings_header_notepreview">Note preview</string>
    <string name="tv_settings_header_markdown">Markdown</string>
    <string name="tv_settings_item_title_theme">Theme</string>
    <string name="tv_settings_item_title_preview_color">Colour background</string>
    <string name="tv_settings_item_title_preview_icon">List icons</string>
    <string name="tv_settings_item_title_preview_metadata">Show metadata</string>
    <string name="tv_settings_item_title_preview_mime">Show file extension</string>
    <string name="tv_settings_item_title_preview_max_lines">Max lines</string>
    <plurals name="tv_settings_item_desc_preview_max_lines">
        <item quantity="one">%d line</item>
        <item quantity="other">%d lines</item>
    </plurals>
    <string name="tv_settings_item_title_bullet_list_symbol">Bullet list symbol</string>
    <string name="tv_settings_item_title_italic_symbol">Italic symbol</string>
    <string name="tv_settings_item_title_bold_symbol">Bold symbol</string>
    <string name="tv_settings_item_title_hr_symbol">Theme break symbol</string>
    <string name="tv_settings_item_title_about">About</string>
    <string name="tv_settings_item_msg_about">Made by Felix Wallin</string>

    <!-- dialog -->

    <!-- title -->
    <plurals name="dialog_title_delete_notes">
        <item quantity="one">Delete note?</item>
        <item quantity="other">Delete %d notes?</item>
    </plurals>
    <plurals name="dialog_title_unlink_notes">
        <item quantity="one">Unlink note?</item>
        <item quantity="other">Unlink %d notes?</item>
    </plurals>
    <plurals name="dialog_title_unlink_tree">
        <item quantity="one">Unlink folder?</item>
        <item quantity="other">Unlink %d folders?</item>
    </plurals>
    <string name="dialog_title_color_notes">Note colour</string>
    <string name="dialog_title_label_notes">Label as</string>
    <string name="dialog_title_add_label">Add label</string>
    <string name="dialog_title_rename_label">Rename label</string>
    <string name="dialog_title_delete_label">Delete this label?</string>

    <!-- message -->
    <string name="dialog_msg_delete_notes">This action cannot be undone.</string>
    <plurals name="dialog_msg_unlink_notes">
        <item quantity="one">This will not take effect if it is linked via a folder.
            You can always link it again.</item>
        <item quantity="other">This will not take effect if they are linked via folders.
            You can always link them again.</item>
    </plurals>
    <plurals name="dialog_msg_unlink_trees">
        <item quantity="one">This will unlink the containing folder and all notes therein.
            You can always link it again.</item>
        <item quantity="other">This will unlink the containing folders and all notes therein.
            You can always link them again.</item>
    </plurals>
    <string name="dialog_msg_delete_label">Your notes will be moved to Backlog.</string>

    <!-- button -->
    <string name="dialog_btn_continue">Continue</string>
    <string name="dialog_btn_set">Set</string>
    <string name="dialog_btn_delete">Delete</string>
    <string name="dialog_btn_unlink">Unlink</string>

    <!-- custom -->
    <string name="dialog_et_hint_add_label">Label</string>

    <!-- toast -->

    <!-- info -->
    <plurals name="toast_i_occurrences_found">
        <item quantity="one">%d occurrence found</item>
        <item quantity="other">%d occurrences found</item>
    </plurals>
    <string name="toast_i_db_note_already_linked">Note already linked</string>
    <string name="toast_i_db_tree_already_linked">Folder already linked</string>

    <!-- error -->
    <string name="toast_e_input">No input</string>
    <string name="toast_e_saf_file_not_found_or_perm_read">File not found or permission to read not persisted,
        unlinking note…</string>
    <string name="toast_e_saf_file_not_found_or_perm_write">File not found or permission to write not persisted</string>
    <string name="toast_e_saf_file_not_found_or_perm">File not found or permissions not persisted,
        unlinking note…</string>
    <string name="toast_e_saf_file_not_found_read">Could not find file to read</string>
    <string name="toast_e_saf_file_not_found_write">Could not find file to write</string>
    <string name="toast_e_saf_file_not_found_rename">Could not find file to rename</string>
    <string name="toast_e_saf_file_not_found_delete">Could not find file to delete, unlinking note …</string>
    <string name="toast_e_saf_provider_support_rename">Provider does not support rename</string>
    <string name="toast_e_saf_provider_support_delete">Provider does not support delete, unlinking note …</string>
    <string name="toast_e_saf_perm_read">Read permission denied for note</string>
    <string name="toast_e_saf_perm_write">Write permission denied for note</string>
    <string name="toast_e_saf_perm_persist">Could not persist permissions for file</string>

</resources>