<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.felwal.markana.ui.labelpager.LabelPagerActivity">

    <item
        android:id="@+id/action_search"
        android:title="@string/action_search"
        android:icon="@drawable/ic_search_24"
        android:iconifiedByDefault="true"
        android:queryHint="@string/tv_notelist_search_hint"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView" />

    <item
        android:id="@+id/action_view_toggle"
        android:title="@string/action_view_list"
        android:icon="@drawable/ic_view_list_24"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_sort"
        android:title="@string/action_sort"
        android:icon="@drawable/ic_sort_24"
        app:showAsAction="always">

        <menu>
            <group
                android:id="@+id/group_sort_by"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/action_sort_name"
                    android:title="@string/action_sort_name" />
                <item
                    android:id="@+id/action_sort_modified"
                    android:title="@string/action_sort_modified" />
                <item
                    android:id="@+id/action_sort_opened"
                    android:title="@string/action_sort_opened" />
            </group>

            <group
                android:id="@+id/group_sort_options"
                android:checkableBehavior="all">
                <item
                    android:id="@+id/action_sort_reverse"
                    android:title="@string/action_sort_reverse" />
            </group>

            <group
                android:id="@+id/group_filter"
                android:checkableBehavior="all">
                <item
                    android:id="@+id/action_filter_show_archived"
                    android:title="@string/action_filter_show_archived" />
            </group>
        </menu>

    </item>

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_settings_24"
        app:showAsAction="always" />

</menu>