<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.felwal.markana.ui.notelist.NoteListActivity">

    <!--
    <item
        android:id="@+id/action_copy"
        android:title="@string/action_copy"
        android:icon="@drawable/ic_copy_file"
        app:showAsAction="ifRoom" />
    -->

    <item
        android:id="@+id/action_pin"
        android:title="@string/action_pin"
        android:icon="@drawable/ic_pin_24"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_color"
        android:title="@string/action_color"
        android:icon="@drawable/ic_color_24"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_select_all"
        android:title="@string/action_select_all"
        android:icon="@drawable/ic_select_all_24"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_unlink"
        android:title="@string/action_unlink"
        android:icon="@drawable/ic_unlink_24"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_unlink_tree"
        android:title="@string/action_unlink_tree"
        android:icon="@drawable/ic_unlink_24"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_archive"
        android:title="@string/action_archive"
        android:icon="@drawable/ic_archive_24"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete"
        android:title="@string/action_delete"
        android:icon="@drawable/ic_delete_24"
        app:showAsAction="never" />

</menu>